# fastapi-example

./: .env  pyproject.toml  requirements.txt
src/: config.py  main.py
src/api/routes/: files_routes.py
src/core/domain/: session.py
src/core/domain/models/: events.py  file.py
src/core/domain/repositories/: files_repository.py
src/core/schemas/: file_schemas.py  response_message.py
src/core/service/: files_service.py
src/migrations/: env.py
src/migrations/versions/: 46876bd316ef_.py  8825c076c0f6_.py
