[tool.poetry]
name = "fileservice"
version = "0.1.0"
description = ""
authors = ["a_bizyuk <biziuk.988@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.35"
mariadb = "^1.1.10"
aiomysql = "^0.2.0"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
